@@ -62,6 +62,7 @@ bugfix:
 - fixed an issue with 'filter=(rule has.source.nat)' where no source NAT rule were shown
 - fixed a crash when trying to add tag to temporary address objects
 - fix address-edit help name-rename output
+- fix class-loopbackinterface / class-aggregateethernetinterface regarding $type variable
 
 
 1.5.12 (2017-04-04)
